// =======================================
// AGROTECH SYSTEM - DBML
// Regras de modelagem:
// RG01: todas as PKs sao UUID
// RG02: timestamps usam timezone (timestamptz)
// RG03: FKs obrigatorias sao not null
// RG04: status e roles documentados por notas
// =======================================

Table users {
  id uuid [primary key]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  role varchar [not null, note: 'ADMIN | OPERADOR']
  created_at timestamptz [not null]
}

// =======================================
// AREAS
// =======================================

Table areas {
  id uuid [primary key]
  name varchar [not null]
  location varchar [not null]
  size double [not null]

  user_id uuid [not null] // dono (OPERADOR)

  created_at timestamptz [not null]
}

// =======================================
// SENSOR PLAN (SOLICITAÇÃO)
// =======================================

Table sensor_plans {
  id uuid [primary key]

  area_id uuid [not null]
  requested_by uuid [not null] // operador
  specialist_id uuid // pode ser null até ser atribuído

  status varchar [not null, note: 'PENDING | IN_PROGRESS | APPROVED | REJECTED']

  notes text

  created_at timestamptz [not null]
  reviewed_at timestamptz
}

// =======================================
// PLANNED SENSORS (DEFINIÇÃO TÉCNICA)
// =======================================

Table planned_sensors {
  id uuid [primary key]

  plan_id uuid [not null]

  name varchar [not null]
  type varchar [not null, note: 'TEMPERATURE | SOIL_HUMIDITY | AIR_HUMIDITY | LUMINOSITY']
  position varchar [not null, note: 'NORTE | SUL | LESTE | OESTE | CENTRO']

  created_at timestamptz [not null]
}

// =======================================
// SENSORS (APÓS APROVAÇÃO)
// =======================================

Table sensors {
  id uuid [primary key]

  name varchar [not null]
  type varchar [not null]
  position varchar [not null]

  area_id uuid [not null]

  is_active boolean [not null]

  created_at timestamptz [not null]
}

// =======================================
// SENSOR READINGS (TIME SERIES)
// =======================================

Table sensor_readings {
  id uuid [primary key]

  sensor_id uuid [not null]

  value double [not null]
  recorded_at timestamptz [not null]
  created_at timestamptz [not null]

  Indexes {
    (sensor_id, recorded_at)
    (recorded_at)
  }
}

// =======================================
// RULES
// =======================================

Table rules {
  id uuid [primary key]

  name varchar [not null]
  operator varchar [not null, note: '> | < | >= | <= | = | !=']
  threshold double [not null]
  is_active boolean [not null]

  sensor_id uuid [not null]
  user_id uuid [not null]

  created_at timestamptz [not null]
}

// =======================================
// ALERTS
// =======================================

Table alerts {
  id uuid [primary key]

  sensor_id uuid [not null]
  rule_id uuid [not null]

  value double [not null]

  message varchar [not null]
  status varchar [not null, note: 'ACTIVE | RESOLVED']

  triggered_at timestamptz [not null]
  resolved_at timestamptz
}

// =======================================
// RELATIONSHIPS
// =======================================

// usuário → áreas
Ref: areas.user_id > users.id

// sensor plan
Ref: sensor_plans.area_id > areas.id
Ref: sensor_plans.requested_by > users.id
Ref: sensor_plans.specialist_id > users.id

// planned sensors
Ref: planned_sensors.plan_id > sensor_plans.id

// sensores reais
Ref: sensors.area_id > areas.id

// leituras
Ref: sensor_readings.sensor_id > sensors.id

// regras
Ref: rules.sensor_id > sensors.id
Ref: rules.user_id > users.id

// alertas
Ref: alerts.sensor_id > sensors.id
Ref: alerts.rule_id > rules.id